--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Bot Ballerini</title>
+    <link rel="icon" type="image" href="gatos.jpeg"
   </head>
   <body>
     <header class="cabecalho">
